# rhotic

./: .gitignore  Cargo.toml  terms.md
config/: text.toml
proc/: Cargo.toml
proc/src/: lib.rs
proc/test/: function_test.rs
rhotic-common/: Cargo.toml
rhotic-core/: Cargo.toml
rhotic-core/config/: text.toml
rhotic-core/src/: main.rs
rhotic-core/src/buffer/: mod.rs  stage.rs  text_buffer.rs  textstage.rs
rhotic-core/src/dired/: mod.rs  theme.rs
rhotic-core/src/display/: event_loop.rs  font.rs  image.rs  render.rs  text_render.rs  types.rs
rhotic-core/src/state/: application.rs
rhotic-macro/: Cargo.toml
rhotic-macro/src/: lib.rs  text_stage_impl.rs
rhotic-macro/test/: test1.rs
rhotic-pid/: Cargo.toml
rhotic-pid/src/: lib.rs
rhotic-text/: Cargo.toml
src/: basic.rs  main.rs
src/buffer/: event.rs  minibuffer.rs  mod.rs  stage.md  stage.rs  stage_config.md  text_buffer.rs  textstage.rs
src/display/: canvas.rs  event_loop.rs  font.rs  image.rs  mod.rs  render.rs  types.rs  vulkan.rs
src/display/shaders/: ex.org  ex.rs
src/file/: toml.rs
src/state/: application.rs  mod.rs
src/state/widgets/: background.rs  button.rs  glyph.rs  mod.rs
