[package]
name = "rhotic-txt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.6"
zerocopy = "0.6.1"
enum-iterator = "1.4.1"
bitvec = "1.0.1"
fontdue = "0.7.3"
anyhow = "1.0.79"
winit = {version = "0.29.10", features = ["rwh_04"]}
softbuffer = "0.4.1"
num = "0.4.1"
serde = "1.0.196"
